# fastapi-magnum-example

./: .env.dist  .gitignore  cassette.yaml  package-lock.json  package.json  pyproject.toml  serverless.yml
.serverless/: cloudformation-template-update-stack.json  requirements  requirements.txt  serverless-state.json
